# panel-kit

./: Cargo.toml  LICENSE  README.md  flake.nix
assets/: panel-kit.css
crates/panel-kit-core/: Cargo.toml
crates/panel-kit-core/src/: lib.rs
crates/panel-kit-tui/: Cargo.toml
crates/panel-kit-tui/examples/: browser_tui.rs  workspace.rs  workspace_canary.rs
crates/panel-kit-tui/src/: charts.rs  lib.rs  meter.rs  scroll.rs  status.rs  table.rs
examples/: badge.rs  spinner.rs  theming.rs  workspace.rs
nix/examples/: workspace-canary.nix
nix/lib/: mkLayout.nix
src/: badge.rs  bevy.rs  grafana.rs  ide.rs  lib.rs
