[package]
name = "panel-kit"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Generic Dioxus panel-workspace library: floating/tiling panels, traffic lights, drag/resize, tiling drag-reorder, minimize-to-dock, layout persistence"
repository = "https://github.com/ocasazza/panel-kit"

[dependencies]
dioxus = { version = "0.6", features = ["web"] }
serde = { version = "1", features = ["derive"] }
gloo-storage = "0.3"
# Deliberately loose: consuming apps pin the exact wasm-bindgen their
# toolchain ships (e.g. =0.2.118 to match nixpkgs' wasm-bindgen-cli).
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "Event", "EventTarget"] }
