[workspace]
members = ["crates/panel-kit-core", "crates/panel-kit-tui"]

[package]
name = "panel-kit"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Generic Dioxus panel-workspace library: floating/tiling panels, traffic lights, drag/resize, tiling drag-reorder, minimize-to-dock, layout persistence"
repository = "https://github.com/ocasazza/panel-kit"
readme = "README.md"
keywords = ["dioxus", "ui", "panels", "workspace", "wasm"]
categories = ["gui", "wasm", "web-programming"]

# The crate is wasm-only (Dioxus web): document it for the target it builds for.
# The renderer-agnostic state machine lives in crates/panel-kit-core; the
# terminal renderer in crates/panel-kit-tui.
[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]
default-target = "wasm32-unknown-unknown"

[dependencies]
panel-kit-core = { version = "0.2.0", path = "crates/panel-kit-core" }
dioxus = { version = "0.6", features = ["web"] }
serde = { version = "1", features = ["derive"] }
gloo-storage = "0.3"
# Deliberately loose: consuming apps pin the exact wasm-bindgen their
# toolchain ships (e.g. =0.2.118 to match nixpkgs' wasm-bindgen-cli).
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "Event", "EventTarget", "Node", "NodeList", "PointerEvent", "ResizeObserver", "ResizeObserverEntry", "Selection"] }

# Injected by dioxus-cli on first `dx build` — dx builds the example demos
# under these profiles.
[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
