[package]
name = "panel-kit-tui"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Ratatui shell for panel-kit-core: floating/tiling panel workspaces with mouse drag/resize, traffic lights, and a dock — in the terminal (and via ratzilla, the browser)"
repository = "https://github.com/ocasazza/panel-kit"
keywords = ["tui", "ratatui", "panels", "workspace"]
categories = ["command-line-interface"]

[dependencies]
panel-kit-core = { version = "0.2.0", path = "../panel-kit-core" }
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
