[package]
name = "panel-kit-tui"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Ratatui shell for panel-kit-core: floating/tiling panel workspaces with mouse drag/resize, traffic lights, and a dock — in the terminal (and via ratzilla, the browser)"
repository = "https://github.com/ocasazza/panel-kit"
keywords = ["tui", "ratatui", "panels", "workspace"]
categories = ["command-line-interface"]
# workspace_canary.rs is a shared module included by the examples (via
# `mod workspace_canary;`), not an example target of its own — disable
# autodiscovery and declare the real examples explicitly.
autoexamples = false

[dependencies]
panel-kit-core = { version = "0.2.0", path = "../panel-kit-core" }
ratatui = { version = "0.30.1", default-features = false, features = ["all-widgets", "layout-cache"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
console_error_panic_hook = "0.1"
critical-section = { version = "1.2", features = ["std"] }
ratzilla = "0.3.1"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
crossterm = "0.29"
ratatui = { version = "0.30.1", features = ["crossterm"] }

[[example]]
name = "workspace"

[[example]]
name = "browser_tui"
